cleanup code: use system.arraycopy where possible